<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="recipes_data_loading_error">Could not loading recipes, please swipe to refresh.</string>
    <string name="dishes_type">Dishes Type</string>
    <string name="diet_type">Diet Type</string>
    <string name="recipe_details_data_loading_error">Could not loading recipe details</string>
    <string name="ingredients_button">Ingredients</string>
    <string name="wines_button">Wines</string>
    <string name="wines">Wines</string>
    <string name="ingredients_amount">100</string>
    <string name="ingredients_name">Name</string>
    <string name="ingredients_unit">Units\n%s</string>
    <string name="amount_title">Amount:%d</string>
    <string name="consistency_title">Consistency:%s</string>
    <string name="estimate_title">Estimate Cost:\n%s</string>
    <string name="substitutes_title">Substitutes:\n%s</string>
    <string name="categories_title">Categories:\n%s</string>
    <string name="ingredient_details_data_loading_error">Could not loading ingredient details</string>
</resources>