<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_smaller_margin">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ingredients_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/recipe_card_view_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="1dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ingredient_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/darker"
            android:elevation="2dp">

            <View
                android:id="@+id/white_background"
                android:layout_width="@dimen/image_view_border_size"
                android:layout_height="0dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ingredient_image_view"
                android:layout_width="@dimen/ingredients_image_view_size"
                android:layout_height="@dimen/ingredients_image_view_size"
                app:layout_constraintBottom_toBottomOf="@id/white_background"
                app:layout_constraintEnd_toEndOf="@+id/white_background"
                app:layout_constraintStart_toStartOf="@+id/white_background"
                app:layout_constraintTop_toTopOf="@id/white_background"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/ingredient_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/ingredients_name"
                android:textColor="@color/lightGray"
                android:textSize="@dimen/default_bigger_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/white_background"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ingredient_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/ingredients_amount"
                android:textColor="@color/lightGray"
                app:layout_constraintStart_toStartOf="@+id/ingredient_name"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_name" />

            <TextView
                android:id="@+id/ingredient_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_small_margin"
                android:text="@string/ingredients_unit"
                android:textColor="@color/lightGray"
                app:layout_constraintBottom_toBottomOf="@+id/ingredient_amount"
                app:layout_constraintStart_toEndOf="@+id/ingredient_amount"
                app:layout_constraintTop_toTopOf="@+id/ingredient_amount" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>