<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="@dimen/progress_bar_animation_size"
        android:layout_height="@dimen/progress_bar_animation_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/progressbar" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/recipe_image"
                android:layout_width="0dp"
                android:layout_height="@dimen/recipe_details_image_height"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <View
                android:id="@+id/gradient_overlay"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:background="@drawable/gradient_overlay"
                app:layout_constraintBottom_toBottomOf="@+id/recipe_image"
                app:layout_constraintEnd_toEndOf="@+id/recipe_image"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/recipe_image"
                app:layout_constraintTop_toTopOf="@+id/recipe_image"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_bigger_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:textColor="@color/yellow"
                android:textSize="@dimen/default_middle_big_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/recipe_image"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100" />

            <ImageView
                android:id="@+id/time_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/darker"
                android:src="@drawable/ic_clock"
                app:layout_constraintBottom_toTopOf="@+id/time_value"
                app:layout_constraintEnd_toEndOf="@+id/time_value"
                app:layout_constraintStart_toStartOf="@+id/time_value"
                app:tint="@color/yellow" />

            <TextView
                android:id="@+id/likes_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_the_biggest_margin"
                android:textColor="@color/red"
                android:textSize="@dimen/default_middle_big_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/time_value"
                app:layout_constraintEnd_toStartOf="@+id/time_value"
                tools:text="100" />

            <ImageView
                android:id="@+id/likes_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/darker"
                android:src="@drawable/ic_heart"
                app:layout_constraintBottom_toTopOf="@+id/likes_value"
                app:layout_constraintEnd_toEndOf="@+id/likes_value"
                app:layout_constraintStart_toStartOf="@+id/likes_value"
                app:tint="@color/red" />

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_big_margin"
                android:background="@color/darker"
                android:textColor="@color/lightGray"
                android:textSize="@dimen/default_bigger_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_image"
                tools:text="Title" />

            <TextView
                android:id="@+id/dishes_type_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_big_margin"
                android:background="@color/darker"
                android:gravity="center_horizontal"
                android:text="@string/dishes_type"
                android:textColor="@color/lightGray"
                android:textSize="@dimen/default_bigger_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

            <LinearLayout
                android:id="@+id/dishes_type_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_middle_small_margin"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dishes_type_title" />


            <TextView
                android:id="@+id/diet_type_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_big_margin"
                android:background="@color/darker"
                android:gravity="center_horizontal"
                android:text="@string/diet_type"
                android:textColor="@color/lightGray"
                android:textSize="@dimen/default_bigger_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dishes_type_container" />

            <LinearLayout
                android:id="@+id/diet_type_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_middle_small_margin"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/diet_type_title" />

            <TextView
                android:id="@+id/summary_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_big_margin"
                android:background="@color/darker"
                android:textColor="@color/lightGray"
                android:textSize="@dimen/default_middle_big_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/diet_type_container"
                tools:text="TextView" />

            <Button
                android:id="@+id/open_wines_screen_button"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginVertical="@dimen/default_big_margin"
                android:backgroundTint="@color/green"
                android:text="@string/wines_button"
                android:textColor="@color/darker"
                android:textSize="@dimen/default_middle_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/summary_textView" />

            <Button
                android:id="@+id/open_ingredients_screen_button"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginVertical="@dimen/default_big_margin"
                android:backgroundTint="@color/green"
                android:text="@string/ingredients_button"
                android:textColor="@color/darker"
                android:textSize="@dimen/default_middle_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/summary_textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>